<resources>
    <string name="app_name">GitSearchRepo</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_Language" translatable="false">Language</string>
    <string name="pref_language_default">anylanguage</string>
    <string name="list_Of_Languages">languageList</string>
    <string name="pref_header_sortby">SortBy</string>
    <string name="sortList">sortList</string>
    <string name="pref_sort_default_MostStars">stars-desc</string>
    <string name="action_share">Share</string>
    <string name="watchView">Watch Count for the Repo</string>
    <string name="forkView">Fork Count of the Repo</string>
    <string name="starView">Star Count of the repo</string>
    <string name="issueView">Open Issues Count of the repo</string>

    <string-array name="pref_language_titles">
        <item>Any Language</item>
        <item>Java Script</item>
        <item>Python</item>
        <item>Java</item>
        <item>Ruby</item>
        <item>PHP</item>
        <item>C</item>
        <item>C++</item>
        <item>Objective-C</item>
        <item>Shell</item>
        <item>C#</item>
    </string-array>


    <string-array name="pref_language_values">
        <item>anylanguage</item>
        <item>javascript</item>
        <item>python</item>
        <item>java</item>
        <item>ruby</item>
        <item>php</item>
        <item>c</item>
        <item>c++</item>
        <item>objective-c</item>
        <item>shell</item>
        <item>c#</item>
    </string-array>

    <string-array name="pref_sort_titles">
        <item>Most stars</item>
        <item>Fewest stars</item>
        <item>Most forks</item>
        <item>Fewest forks</item>
        <item>Recently Updated</item>
    </string-array>

    <string-array name="pref_sort_values">
        <item>stars-desc</item>
        <item>stars-asc</item>
        <item>forks-desc</item>
        <item>forks-asc</item>
        <item>updated-desc</item>
    </string-array>

    <string name="search_label">Search</string>
    <string name="search_hint">search for repositories</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">searchrepo.example.com</string>
    <string name="content_authority">com.iloveandrroid.divya.searchrepo</string>
    <string name="empty_Repo_list">No Repository Information Available</string>
    <string name="empty_repo_list_no_network">No Repository information available. The network is not available to fetch Repository data.</string>
    <string name="avatar">Avatar of user</string>
    <string name="description">Description:</string>
    <string name="language">Language:</string>
    <string name="updated">Updated:</string>
    <string name="repo_url">Repo_URL:</string>
    <string name="default_url">http://github.com</string>
    <string name="issues">Issues</string>
    <string name="fork">Fork</string>
    <string name="watch">Watch</string>
    <string name="star">Star</string>

    <!-- Strings related to Widgets -->
    <string name="title_widget_repo">Search Repositories</string>

    <string name="banner_ad_unit_id">ca-app-pub-6791404200619152/3472843025</string>
</resources>
