<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

    <ListPreference
        android:defaultValue="@string/pref_language_default"
        android:entries="@array/pref_language_titles"
        android:entryValues="@array/pref_language_values"
        android:key="@string/list_Of_Languages"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_header_Language" />

    <ListPreference
        android:title="@string/pref_header_sortby"
        android:key="@string/sortList"
        android:defaultValue="@string/pref_sort_default_MostStars"
        android:entries="@array/pref_sort_titles"
        android:entryValues="@array/pref_sort_values"
        />


</PreferenceScreen>
