<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".RepoDetailFragment">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@style/Toolbar.CollapsedTitleText"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleTextAppearance="@style/Toolbar.ExpandedTitleText"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <ImageView
                android:id="@+id/avatar_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/avatar" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            </android.support.v7.widget.Toolbar>


        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <LinearLayout
                android:id="@+id/desc_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/detail_description_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:fontFamily="sans-serif-condensed"
                    android:textAppearance="?android:textAppearanceLarge"/>


                <TextView
                    android:id="@+id/detail_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:fontFamily="sans-serif-condensed"
                    android:textAppearance="?android:textAppearanceMedium"/>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/lang_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/desc_layout"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lang_Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    android:fontFamily="sans-serif-condensed"
                    android:textAppearance="?android:textAppearanceLarge"/>

                <TextView
                    android:id="@+id/list_item_lang_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:fontFamily="sans-serif-condensed"
                    android:textAppearance="?android:textAppearanceMedium"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/Updated_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lang_layout"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Updated_Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/updated"
                    android:fontFamily="sans-serif-condensed"
                    android:textAppearance="?android:textAppearanceLarge"/>

                <TextView
                    android:id="@+id/list_item_update_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:fontFamily="sans-serif-condensed"
                    android:textAppearance="?android:textAppearanceMedium"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/repo_url_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Updated_layout"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/repo_url_Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repo_url"
                    android:fontFamily="sans-serif-condensed"
                    android:textAppearance="?android:textAppearanceLarge"/>

                <TextView
                    android:id="@+id/repo_url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:paddingStart="15dp"
                    android:text="@string/default_url"
                    android:fontFamily="sans-serif-condensed"
                    android:textAppearance="?android:textAppearanceMedium"/>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/repo_url_layout"
                android:layout_marginTop="15dp"
                android:weightSum="2"
                android:layout_marginStart="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/back"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:id="@+id/issues_ll">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/imageback"
                        android:contentDescription="@string/issueView"
                        android:src="@drawable/ic_issues"
                        android:layout_weight="0.1"
                        android:layout_gravity="start"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/issues"
                        android:textStyle="bold"
                        android:layout_weight="0.3"
                        android:background="@drawable/textbackground"
                        android:gravity="center"
                        android:fontFamily="sans-serif-condensed"
                        android:textAppearance="?android:textAppearanceMedium"/>

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/issues_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="0.6"
                        android:fontFamily="sans-serif-condensed"
                        android:textAppearance="?android:textAppearanceMedium"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/back"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:id="@+id/fork_ll"
                    android:layout_below="@+id/issues_ll"

                    android:layout_marginTop="15dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/imageback"
                        android:contentDescription="@string/forkView"
                        android:src="@drawable/ic_fork"
                        android:layout_weight="0.1"
                        android:layout_gravity="start"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/fork"
                        android:textStyle="bold"
                        android:layout_weight="0.3"
                        android:background="@drawable/textbackground"
                        android:gravity="center"
                        android:fontFamily="sans-serif-condensed"
                        android:textAppearance="?android:textAppearanceMedium"/>

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/fork_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="0.6"
                        android:fontFamily="sans-serif-condensed"
                        android:textAppearance="?android:textAppearanceMedium"/>
                </LinearLayout>



                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/back"
                    android:gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:orientation="horizontal"
                    android:layout_weight="1"

                    android:layout_marginTop="15dp"
                    android:layout_below="@+id/fork_ll"
                    android:id="@+id/watch_ll">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/imageback"
                        android:contentDescription="@string/watchView"
                        android:src="@drawable/ic_watch"
                        android:layout_gravity="start"
                        android:layout_weight="0.1"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/watch"
                        android:textStyle="bold"
                        android:layout_weight="0.3"
                        android:background="@drawable/textbackground"
                        android:gravity="center"
                        android:fontFamily="sans-serif-condensed"
                        android:textAppearance="?android:textAppearanceMedium"/>

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/watch_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="0.6"
                        android:fontFamily="sans-serif-condensed"
                        android:textAppearance="?android:textAppearanceMedium"

                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/back"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:layout_marginTop="15dp"
                    android:id="@+id/star_ll"
                    android:layout_below="@+id/watch_ll">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/imageback"
                        android:contentDescription="@string/starView"
                        android:src="@drawable/ic_star"
                        android:layout_weight="0.1"
                        android:layout_gravity="start"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/star"
                        android:textStyle="bold"
                        android:layout_weight="0.3"
                        android:background="@drawable/textbackground"
                        android:gravity="center"
                        android:fontFamily="sans-serif-condensed"
                        android:textAppearance="?android:textAppearanceMedium"/>

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/star_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="0.6"
                        android:fontFamily="sans-serif-condensed"
                        android:textAppearance="?android:textAppearanceMedium"

                        />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>
        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>